# Software-Design-Patterns

./: .gitignore
AbstractFactoryMethod/: CMakeLists.txt
AbstractFactoryMethod/include/: car_engine.h  car_factory.h  car_wheels.h  engine.h  truck_engine.h  truck_factory.h  truck_wheels.h  vehicle_factory.h  wheels.h
AbstractFactoryMethod/src/: car_engine.cpp  car_wheels.cpp  create_factory.cpp  main.cpp  truck_engine.cpp  truck_wheels.cpp
SimpleFactoryDesignPattern/: CMakeLists.txt
SimpleFactoryDesignPattern/include/: CarVehicle.ixx  IVehicle.ixx  TruckVehicle.ixx  VehicleFactory.ixx  document_creation_factory.h  document_interface.h  pdf_document.h  word_document.h
SimpleFactoryDesignPattern/src/: CarVehicle.cpp  TruckVehicle.cpp  main.cpp  pdf_document.cpp  word_document.cpp
SingletonDesignPattern/: CMakeLists.txt  Logger.cpp  Logger.ixx  main.cpp
